[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "photomanagement"
version = "0.1.0"
description = "Local-first pipeline for deduplicating and organizing large photo/video libraries"
authors = [{name = "Photo Management Maintainer"}]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "Pillow>=9.0.0,<11.0.0",
]

[project.optional-dependencies]
cli = ["tqdm>=4.66.0"]

[project.scripts]
photomanagement = "photomanagement.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
